# wslwinreg

./: .readthedocs.yaml  .travis.yml  LICENSE.txt  README.rst  build_rules.py  pyproject.toml  setup.py  tox.ini
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: python-build.yml
docs/: Doxyfile  classes.rst  conf.py  constants.rst  functions.rst  index.rst  requirements.txt  why_wslwinreg.md
src/: backendv19win10.sln  backendv19win10.vcxproj  backendv22win10.sln  backendv22win10.vcxproj  backendv22win10.vcxproj.filters  build_rules.py  wslbackend.cpp
unittests/: test_extras.py  test_winreg.py
wslwinreg/: __init__.py  common.py  cygwinapi.py  nullapi.py  wslapi.py
